# andy-lang

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  SPECIFICATION.md  application.andy  test.json  tests.andy  ui.html
.github/: copilot-instructions.md
.github/workflows/: build-ubuntu-18.04.yml  build-ubuntu-20.04.yml  build-ubuntu-22.04.yml  build-ubuntu-24.04.yml  build-wasm.yml  build-windows-2022.yml
andy-engine/: application.andy
andy-engine/pages/: schema.xsd  welcome_page.xml
cmake/: andy-langConfig.cmake.in
examples/: all.andy  array.andy  base_class.andy  complex_expressions.andy  dictionary.andy  eval.andy  file.andy  function.andy  if.andy  loop.andy  minimal.andy  output.andy  return.andy  system.andy
experiments/: is_alnum_or_underscore.cpp  launching.sh  read_file.cpp  run_experiment.sh
experiments/loop/: loop.andy  loop.c  loop.py  loop.rb
experiments/some/: compilation.cpp  debub-linux.cpp  is_alpha.cpp
include/andy/lang/: api.h  api.hpp  class.hpp  class_class.hpp  context.hpp  error.hpp  extension.hpp  function.hpp  interpreter.hpp  interpreter_context.hpp  lang.hpp  lexer.hpp  method.hpp  object.hpp  parser.hpp  preprocessor.hpp
pages/: main_frame.xml
src/: analyzer.cpp  andy.cpp  andyc++.cpp  api.cpp  array_class.cpp  builtin_libs.cpp  class.cpp  class_class.cpp  config.cpp  error.cpp  extension.cpp  function.cpp  function_call.cpp  interpreter.cpp  lexer.cpp  method.cpp  object.cpp  parser.cpp  preprocessor.cpp  std_class.cpp  std_functions.cpp
src/builtin_libs/: net_extension.cpp  tests_extension.cpp  ui_extension.cpp
src/builtin_libs/drawing_extension/: CMakeLists.txt
src/builtin_libs/drawing_extension/src/: dialog_class.cpp  drawing_extension.cpp  drawing_extension_unavailable.cpp  page_class.cpp  ui_extension.cpp  ui_extension_unavailable.cpp  window_class.cpp
src/builtin_libs/net_extension/: CMakeLists.txt  http_class.cpp
src/builtin_libs/net_extension/src/: http_class.cpp  net_class.cpp  net_extension.cpp  net_extension_unavailable.cpp
src/builtin_libs/ui_extension/: CMakeLists.txt  app_class.cpp  toplevel_class.hpp
src/builtin_libs/ui_extension/include/: app_class.hpp
src/builtin_libs/ui_extension/src/: app_class copy.cpp  app_class.cpp  dialog_class.cpp  frame_class.cpp  toplevel_class.hpp  ui_extension.cpp  ui_extension_unavailable.cpp  xml_page_class.cpp
src/classes/: add_operators.hpp  andy_config_class.cpp  array_class.cpp  class_class.cpp  dictionary_class.cpp  directory_class.cpp  double_class.cpp  false_class.cpp  file_class.cpp  float_class.cpp  function_class.cpp  integer_class.cpp  null_class.cpp  path_class.cpp  std_class.cpp  string_class.cpp  system_class.cpp  true_class.cpp
std/: tests.andy
tests/andy/: cases_spec.cpp
tests/andy-lang/: lexer_spec.cpp
tests/andy/cases/class/instance/methods/: 1.andy
tests/andy/cases/class/static/methods/: 1.andy
tests/andy/cases/expressions/as function parameters/: case-1.andy
tests/andy/cases/interpolation/: 1.andy  2.andy  3.andy  4.andy  5.andy
tests/andy/cases/namespace/: 1.andy  2.andy  3.andy  4.andy
tests/andy/cases/reflection/class/: 1.new.andy  1.subclass.andy
tests/andy/cases/unescape/: 1.andy
tests/high-level/: class_spec.andy  comment_spec.andy  expressions.andy  fn_spec.andy  for_spec.andy  function_call.andy  if_spec.andy  integer_spec.andy  loop_spec.andy  namespace.andy  namespace_spec.andy  net_spec.andy  preprocessor_spec.andy  reflection_spec.andy  std_functions_spec.andy  std_spec.andy  string_spec.andy  var_spec.andy  while_spec.andy
utility/: debugger.andy
utility/debugger/: linux.andy
utility/debugger/linux/: adress_from_symbol.andy
win32/: installer.cpp
